add support to manage Nodes
