# api/management/v1/server/restapi/cilium/post_management_kubernetes_io_v1_nodes.go
@@ -1,0 +1,61 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+// Copyright 2017-2020 Authors of Cilium
+// SPDX-License-Identifier: Apache-2.0
+
+package cilium
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// PostManagementKubernetesIoV1NodesHandlerFunc turns a function with the right signature into a post management kubernetes io v1 nodes handler
+type PostManagementKubernetesIoV1NodesHandlerFunc func(PostManagementKubernetesIoV1NodesParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn PostManagementKubernetesIoV1NodesHandlerFunc) Handle(params PostManagementKubernetesIoV1NodesParams) middleware.Responder {
+	return fn(params)
+}
+
+// PostManagementKubernetesIoV1NodesHandler interface for that can handle valid post management kubernetes io v1 nodes params
+type PostManagementKubernetesIoV1NodesHandler interface {
+	Handle(PostManagementKubernetesIoV1NodesParams) middleware.Responder
+}
+
+// NewPostManagementKubernetesIoV1Nodes creates a new http.Handler for the post management kubernetes io v1 nodes operation
+func NewPostManagementKubernetesIoV1Nodes(ctx *middleware.Context, handler PostManagementKubernetesIoV1NodesHandler) *PostManagementKubernetesIoV1Nodes {
+	return &PostManagementKubernetesIoV1Nodes{Context: ctx, Handler: handler}
+}
+
+/*PostManagementKubernetesIoV1Nodes swagger:route POST /management/kubernetes.io/v1/nodes cilium postManagementKubernetesIoV1Nodes
+
+PostManagementKubernetesIoV1Nodes post management kubernetes io v1 nodes API
+
+*/
+type PostManagementKubernetesIoV1Nodes struct {
+	Context *middleware.Context
+	Handler PostManagementKubernetesIoV1NodesHandler
+}
+
+func (o *PostManagementKubernetesIoV1Nodes) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		r = rCtx
+	}
+	var Params = NewPostManagementKubernetesIoV1NodesParams()
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
