# api/management/v1/server/restapi/cilium/post_management_kubernetes_io_v1_nodes_parameters.go
@@ -1,0 +1,72 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+// Copyright 2017-2020 Authors of Cilium
+// SPDX-License-Identifier: Apache-2.0
+
+package cilium
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+
+	"github.com/cilium/kube-apate/api/management/v1/models"
+)
+
+// NewPostManagementKubernetesIoV1NodesParams creates a new PostManagementKubernetesIoV1NodesParams object
+// no default values defined in spec.
+func NewPostManagementKubernetesIoV1NodesParams() PostManagementKubernetesIoV1NodesParams {
+
+	return PostManagementKubernetesIoV1NodesParams{}
+}
+
+// PostManagementKubernetesIoV1NodesParams contains all the bound params for the post management kubernetes io v1 nodes operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters PostManagementKubernetesIoV1Nodes
+type PostManagementKubernetesIoV1NodesParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*Options to modify structures
+	  In: body
+	*/
+	Options *models.Options
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewPostManagementKubernetesIoV1NodesParams() beforehand.
+func (o *PostManagementKubernetesIoV1NodesParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body models.Options
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			res = append(res, errors.NewParseError("options", "body", "", err))
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.Options = &body
+			}
+		}
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
