# api/management/v1/server/restapi/management_api.go
@@ -56,6 +56,9 @@ func NewManagementAPI(spec *loads.Document) *ManagementAPI {
 		CiliumPostManagementCiliumIoV2CiliumNodesHandler: cilium.PostManagementCiliumIoV2CiliumNodesHandlerFunc(func(params cilium.PostManagementCiliumIoV2CiliumNodesParams) middleware.Responder {
 			return middleware.NotImplemented("operation cilium.PostManagementCiliumIoV2CiliumNodes has not yet been implemented")
 		}),
+		CiliumPostManagementKubernetesIoV1NodesHandler: cilium.PostManagementKubernetesIoV1NodesHandlerFunc(func(params cilium.PostManagementKubernetesIoV1NodesParams) middleware.Responder {
+			return middleware.NotImplemented("operation cilium.PostManagementKubernetesIoV1Nodes has not yet been implemented")
+		}),
 		CiliumPostManagementKubernetesIoV1PodsHandler: cilium.PostManagementKubernetesIoV1PodsHandlerFunc(func(params cilium.PostManagementKubernetesIoV1PodsParams) middleware.Responder {
 			return middleware.NotImplemented("operation cilium.PostManagementKubernetesIoV1Pods has not yet been implemented")
 		}),
@@ -99,6 +102,8 @@ type ManagementAPI struct {
 	CiliumPostManagementCiliumIoV2CiliumIdentitiesHandler cilium.PostManagementCiliumIoV2CiliumIdentitiesHandler
 	// CiliumPostManagementCiliumIoV2CiliumNodesHandler sets the operation handler for the post management cilium io v2 cilium nodes operation
 	CiliumPostManagementCiliumIoV2CiliumNodesHandler cilium.PostManagementCiliumIoV2CiliumNodesHandler
+	// CiliumPostManagementKubernetesIoV1NodesHandler sets the operation handler for the post management kubernetes io v1 nodes operation
+	CiliumPostManagementKubernetesIoV1NodesHandler cilium.PostManagementKubernetesIoV1NodesHandler
 	// CiliumPostManagementKubernetesIoV1PodsHandler sets the operation handler for the post management kubernetes io v1 pods operation
 	CiliumPostManagementKubernetesIoV1PodsHandler cilium.PostManagementKubernetesIoV1PodsHandler
 	// ServeError is called when an error is received, there is a default handler
@@ -185,6 +190,9 @@ func (o *ManagementAPI) Validate() error {
 	}
 	if o.CiliumPostManagementCiliumIoV2CiliumNodesHandler == nil {
 		unregistered = append(unregistered, "cilium.PostManagementCiliumIoV2CiliumNodesHandler")
+	}
+	if o.CiliumPostManagementKubernetesIoV1NodesHandler == nil {
+		unregistered = append(unregistered, "cilium.PostManagementKubernetesIoV1NodesHandler")
 	}
 	if o.CiliumPostManagementKubernetesIoV1PodsHandler == nil {
 		unregistered = append(unregistered, "cilium.PostManagementKubernetesIoV1PodsHandler")
@@ -289,6 +297,10 @@ func (o *ManagementAPI) initHandlerCache() {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
 	o.handlers["POST"]["/management/cilium.io/v2/ciliumnodes"] = cilium.NewPostManagementCiliumIoV2CiliumNodes(o.context, o.CiliumPostManagementCiliumIoV2CiliumNodesHandler)
+	if o.handlers["POST"] == nil {
+		o.handlers["POST"] = make(map[string]http.Handler)
+	}
+	o.handlers["POST"]["/management/kubernetes.io/v1/nodes"] = cilium.NewPostManagementKubernetesIoV1Nodes(o.context, o.CiliumPostManagementKubernetesIoV1NodesHandler)
 	if o.handlers["POST"] == nil {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
